--- a/DBWizard.csproj
+++ b/DBWizard.csproj
@@ -36,10 +36,6 @@
     <Reference Include="MongoDB.Driver">
       <HintPath>..\BlackGalaxyServer\bin\Debug\MongoDB.Driver.dll</HintPath>
     </Reference>
-    <Reference Include="Mysql.Data, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BlackGalaxyServer\bin\Debug\Mysql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -95,7 +91,12 @@
     <Compile Include="StoreAttributes\CUserLoadCallBackAttribute.cs" />
     <Compile Include="StoreAttributes\CUserSaveCallBackAttribute.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MySql.Data\MySql.Data.csproj">
+      <Project>{e9df5ed1-4cbd-4226-b931-9a51610ac14d}</Project>
+      <Name>MySql.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
